[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/theme/game_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/theme/fonts/agent_hud_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://game/gui/icons/icon_bullet_VERS.tres" type="Texture" id=3]
[ext_resource path="res://game/gui/DriverHud.gd" type="Script" id=4]
[ext_resource path="res://assets/theme/home_theme.tres" type="Theme" id=5]

[node name="AgentHud" type="VBoxContainer"]
margin_left = -50.0
margin_right = 50.0
margin_bottom = 210.0
grow_horizontal = 2
rect_min_size = Vector2( 6, 0 )
theme = ExtResource( 1 )
custom_constants/separation = 16
script = ExtResource( 4 )

[node name="Control" type="ColorRect" parent="."]
visible = false
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 10, 200 )
size_flags_horizontal = 3

[node name="MessageTag" type="Node2D" parent="."]
position = Vector2( 49, -256 )
__meta__ = {
"_edit_group_": true,
"_edit_vertical_guides_": [ 0.0, 32.0 ]
}

[node name="VHBoxContainer" type="VBoxContainer" parent="MessageTag"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -233.5
margin_top = -100.0
margin_right = 233.5
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource( 1 )
alignment = 2

[node name="Label_2" type="Label" parent="MessageTag/VHBoxContainer"]
margin_left = 57.0
margin_right = 409.0
margin_bottom = 48.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource( 5 )
text = "Personal best"
align = 1
uppercase = true

[node name="Label_3" type="Label" parent="MessageTag/VHBoxContainer"]
margin_left = 135.0
margin_top = 52.0
margin_right = 332.0
margin_bottom = 100.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource( 5 )
text = "00:00.00"
align = 1

[node name="Label_4" type="Label" parent="MessageTag/VHBoxContainer"]
margin_left = 135.0
margin_top = 104.0
margin_right = 332.0
margin_bottom = 152.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource( 5 )
text = "00:00.00"
align = 1

[node name="Label_5" type="Label" parent="MessageTag/VHBoxContainer"]
margin_left = 135.0
margin_top = 156.0
margin_right = 332.0
margin_bottom = 204.0
grow_horizontal = 2
size_flags_horizontal = 4
theme = ExtResource( 5 )
text = "00:00.00"
align = 1

[node name="HealthBar" type="Control" parent="."]
margin_right = 100.0
margin_bottom = 8.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 8 )
size_flags_horizontal = 4

[node name="Undi" type="ColorRect" parent="HealthBar"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 8 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="Bar" type="ColorRect" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 8 )
color = Color( 0.847059, 0.0235294, 0.0235294, 1 )

[node name="GasBar" type="Control" parent="."]
margin_top = 24.0
margin_right = 100.0
margin_bottom = 32.0
grow_horizontal = 2
rect_min_size = Vector2( 100, 8 )
size_flags_horizontal = 4

[node name="Undi" type="ColorRect" parent="GasBar"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 8 )
color = Color( 0.243137, 0.243137, 0.243137, 1 )

[node name="Bar" type="ColorRect" parent="GasBar"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 8 )
color = Color( 0.847059, 0.0235294, 0.0235294, 1 )

[node name="Selector" type="HBoxContainer" parent="."]
margin_top = 48.0
margin_right = 100.0
margin_bottom = 146.0
grow_horizontal = 2
custom_constants/separation = 0
alignment = 1

[node name="Feature" type="VBoxContainer" parent="Selector"]
margin_left = 18.0
margin_right = 82.0
margin_bottom = 98.0
grow_horizontal = 2

[node name="Icon" type="TextureRect" parent="Selector/Feature"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 4
texture = ExtResource( 3 )

[node name="CountLabel" type="Label" parent="Selector/Feature"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 98.0
grow_horizontal = 2
rect_min_size = Vector2( 48, 0 )
custom_fonts/font = ExtResource( 2 )
text = "000"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( 0, 0, 100, 100 )

[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
